@@ -1,3 +1,11 @@
+2020-05-03  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/94933
+	* include/bits/stl_algobase.h (__fill_a1): Make overload for byte types
+	usable in constant expressions.
+	* testsuite/25_algorithms/fill_n/constexpr.cc: Test with bytes and
+	non-scalars.
+
 2020-05-01  Jonathan Wakely  <jwakely@redhat.com>
 
 	PR libstdc++/94901
